--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
   build-and-push-to-dh:
     name: Build and push to DockerHub
     runs-on: ubuntu-latest
-    # needs: [test]
+    needs: [test]
     steps:
       - uses: actions/checkout@v3
 
