--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,29 +8,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push-to-dh:
-    name: Build and push to DockerHub
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build docker image
+      - name: Prepare unit tests
         run: |
-          docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/appointment-service:latest
+          sudo apt update
+          sudo apt install -y python3-pip
+          pip install -r requirements.txt
 
-      - name: Test solution
+      - name: Run unit tests
         run: |
-          echo There will be tests later
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3.0.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push tag to DockerHub
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/appointment-service:latest
+          pytest ./tests/
 
   build-and-push-to-yc:
     name: Build and push to YandexCloud Registry
