--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           sudo docker build . --file Dockerfile --tag back-tests
           sleep 5
-          sudo docker run -p 8000:8000 -e 
+          sudo docker run -p 8000:8000 
           sleep 5
 
       - name: Run e2e tests
